# test_plot

./: CMakeLists.txt  Readme.md  example.md
lib/: control_panel.cpp  control_panel.hpp  figure.cpp  figure.hpp  iglp.h  iglp.hpp  mutable_plot.cpp  mutable_plot.hpp  plot.cpp  plot.h  plot.hpp  plotter.cpp  plotter.hpp  screen_saver.cpp  screen_saver.h
src/: example.cpp  initialTests.cpp  main.cpp
